# Influencer-Intelligence-Credibility-Engine

./: .dockerignore  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  readme.md  test_int.db  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  iice_test.db  package.json  pyproject.toml  test_int.db
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: campaigns.py  discovery.py  events.py  influencers.py  n8n_callback.py
apps/api/app/api/schemas/: campaigns.py  discovery.py  influencers.py
apps/api/app/core/: settings.py
apps/api/app/db/: alembic.ini  session.py
apps/api/app/db/migrations/: README.md  env.py
apps/api/app/integrations/n8n/: client.py  status.py
apps/api/app/integrations/openrouter/: client.py
apps/api/app/models/: __init__.py  audit_log.py  campaign.py  dimension_score.py  discovery_run.py  influencer.py  outreach_draft.py
apps/api/app/services/: __init__.py  audit.py  campaigns.py  channel.py  discovery_runs.py  draft_generation.py  event_bus.py  influencers.py  llm.py  n8n.py  normalization.py  outreach.py
apps/api/app/services/scoring/: composite.py  evidence.py  evidence_parallel.py  json_guard.py  persist.py  phase0.py  pipeline.py  profile_verify.py  prompts.py  rubric.py  runner.py  scorer.py  serper_verify.py  types.py
apps/api/tests/: test_integration.py
apps/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dev docs/: BUILD_LOG.md  cr.md  plan.md  scoring_improvements.md
integrations/n8n/: README.md
(+21 files in other folders)
