[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iice-api"
version = "0.1.0"
description = "FastAPI backend for Influencer Intelligence & Credibility Engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "alembic>=1.13.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
